<resources>
    <string name="app_name">Weather</string>
    <string name="thermostat_icon_content_description">Thermostat</string>
    <string name="wind_power_icon_content_description">Wind Power</string>
    <string name="temp_format">%1$d°F</string>
    <string name="blue_thermostat_icon">Blue Thermostat</string>
    <string name="red_thermostat_icon">Red Thermostat</string>
    <string name="wind_text_format_mph">%1$d mph</string>
    <string name="chevron">Chevron</string>
    <string name="weather_image">Weather Image</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="high_low_temp">High: %1$s°F Low: %2$s°F</string>
    <string name="humidity">%1$s%% humidity</string>
    <string name="wind_desc">Wind at %1$s mph with gusts up to %2$s mph</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_location_change_message">Location can be changed with internet access.</string>
    <string name="no_weather_data">No Weather Data for This Location</string>
    <string name="try_again_with_internet">Please try again later with internet access.</string>
    <string name="no_internet_no_data">No Internet Access or Saved Data</string>
    <string name="old_data_message">Data shown is from last time app was used with internet access.</string>
    <string name="network_fetch_error">Network Error</string>
    <string name="please_try_again_later">Please try again later.</string>
    <string name="yesterday">Yesterday</string>
    <string name="enter_you_zip_code">Enter your zip code</string>
    <string name="zip_code">Zip Code</string>
    <string name="fragment_main_label">fragment_main</string>
    <string name="fragment_single_day_forecast_label">fragment_single_day_forecast</string>
    <string name="zip_code_dialog_fragment">ZipCodeDialogFragment</string>
</resources>