...
        android:minWidth="300dp"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="15dp">

        <TextView
            android:id="@+id/enterZipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/enter_you_zip_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/zipCodeTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            android:hint="@string/zip_code"
...
